--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,11 +4,11 @@
 }
 
 body {
-  background-color: #dcdcdc;
+  background-color: #e9e9e9;
 }
 header {
   height: 10%;
-  background-color: #f5f5f5;
+  background-color: #1a0d31;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -26,16 +26,18 @@ li {
 
 a {
   text-decoration: none;
+  color: white;
 }
 
 footer {
   height: 10%;
-  background-color: #f5f5f5;
+  background-color: #1a0d31;
   display: flex;
   justify-content: center;
   align-items: center;
   bottom: 0;
   width: 100%;
+  color: white;
   position: fixed;
 }
 
@@ -56,7 +58,7 @@ figure {
 }
 .chad {
   margin: auto;
-  height: 500px;
+  height: 400px;
   align-items: center;
   justify-content: center;
   border-radius: 20px;
@@ -67,4 +69,20 @@ figcaption {
   text-align: center;
   font-style: italic;
   margin: 10px;
+}
+
+.contact {
+  text-align: center;
+  margin: 20px;
+  border: 3px solid black;
+  border-radius: 20px;
+  color: white;
+  background-color: rgb(182, 182, 182);
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 8px;
 }
